fix: remove unnecessary css, update dark mode background color, update app name

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,8 +11,8 @@
   align-items: center;
   justify-items: center;
   min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
+  padding: 10px;
+  gap: 10px;
   font-family: var(--font-geist-sans);
 }
 
@@ -54,31 +54,6 @@
   padding: 2px 4px;
   border-radius: 4px;
   font-weight: 600;
-}
-
-.ctas {
-  display: flex;
-  gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
 }
 
 a.primary {
@@ -140,16 +115,6 @@ a.secondary {
     text-align: center;
   }
 
-  .ctas {
-    flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
   a.secondary {
     min-width: auto;
   }
@@ -180,7 +145,7 @@ a.secondary {
   color: white;
 }
 
-.squares {
+/* .squares {
   width: 10%;
   height: 100px;
   line-height: 105px;
@@ -188,7 +153,7 @@ a.secondary {
   left: 45%;
   top: 10%;
   transform: translateX(-45%);
-}
+} */
 
 .squareinput {
   width:250px;
